--- a/index.pug
+++ b/index.pug
@@ -1,6 +1,4 @@
 h1 Todos List
-ul
-   li Đi chợ
-   li Nấu cơm
-   li Rửa bát
-   li Học code tại Coders-X
+ul 
+   each todo in todos
+     li= todo
