--- a/index.pug
+++ b/index.pug
@@ -1,4 +1,7 @@
 h1 Todos List
+form(action="/todos" method="GET")
+  input(type="text" name="q")
+  button search
 ul 
    each todo in todos
      li= todo
