--- a/todos.pug
+++ b/todos.pug
@@ -4,7 +4,10 @@ form(action="/todos", method="GET")
   button search
 ul 
    each todo in todos
-     li= todo.text
+     li
+       label= todo.text
+       span &nbsp;&nbsp;&nbsp;
+       a(href="/todos/" + todo.id + "/delete") xóa
      
 h3 Create new task
 form(action="/todos/create", method="POST")
