--- a/views/books/addBook.pug
+++ b/views/books/addBook.pug
@@ -1,4 +1,5 @@
 h1 Add a new book
+a(href="/books") Back
 form(action="/books/add", method="POST")
   label Book title:
   input(type="text", name="tit")
