--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,6 @@
 h1 This is Bookworm's Space
-
 a(href="/books") View books
-
 br
-
 a(href="/users") View users
+br
+a(href="/transactions") View transactions
