--- a/views/users/addUser.pug
+++ b/views/users/addUser.pug
@@ -1,4 +1,5 @@
 h1 Add a new user
+a(href="/users") Back
 form(action="/users/add", method="POST")
   label User name:
   input(type="text", name="name")
