add common layout

--- a/views/books/addBook.pug
+++ b/views/books/addBook.pug
@@ -1,12 +1,14 @@
-h1 Add a new book
-a(href="/books") Back
-form(action="/books/add", method="POST")
-  label Book title:
-  input(type="text", name="tit")
-  br
-  br
-  label Description:
-  textarea(name="des")
-  br
-  br
-  button Add book
+extends ../layouts/common.pug
+block content  
+  h1 Add a new book
+  a(href="/books") Back
+  form(action="/books/add", method="POST")
+    label Book title:
+    input(type="text", name="tit")
+    br
+    br
+    label Description:
+    textarea(name="des")
+    br
+    br
+    button Add book
