--- a/views/transactions/trans.pug
+++ b/views/transactions/trans.pug
@@ -1,11 +1,15 @@
-h1 Transactions List
-a(href="/") Back
-form(action="/transactions", method="GET")  
-ul 
-   each transaction in transactions
-     li
-       label= transaction.userId
-       span &nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
-       label= transaction.bookId
+extends ../layouts/common.pug
+block content  
+  h1 Transactions List
+  a(href="/") Back
+  form(action="/transactions", method="GET")  
+  ul 
+     each transaction in transactions
+       li
+         label= transaction.userId
+         span &nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
+         label= transaction.bookId
+         span &nbsp;&nbsp;&nbsp;
+         a(href="/transactions/"+ transaction.id + "/complete") Complete
 
-a(href="/transactions/add") Create more transactions
+  a(href="/transactions/add") Create more transactions
