--- a/views/users/viewUser.pug
+++ b/views/users/viewUser.pug
@@ -1,10 +1,12 @@
-h1 View User 
-a(href="/users") Back
-p 
-  b Name: 
-  pan= user.name
-  br
-  b Phone number: 
-  pan= user.phone
-  br
-  a(href="/users/" + user.id + "/edit") Edit user
+extends ../layouts/common.pug
+block content
+  h1 View User 
+  a(href="/users") Back
+  p 
+    b Name: 
+    pan= user.name
+    br
+    b Phone number: 
+    pan= user.phone
+    br
+    a(href="/users/" + user.id + "/edit") Edit user
