--- a/views/transactions/trans.pug
+++ b/views/transactions/trans.pug
@@ -10,6 +10,6 @@ block content
          span &nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;
          label= transaction.bookId
          span &nbsp;&nbsp;&nbsp;
-         a(href="/transactions/"+ transaction.id + "/complete") Complete
+         a(href="/transactions/"+ transaction.id + "/complete") View completion
 
   a(href="/transactions/add") Create more transactions
