--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -1,5 +1,20 @@
 html
     head
         link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css", rel="stylesheet")
+        link(rel="shortcut icon", type="image/png", href="https://cdn.glitch.com/d40b590f-c0a9-431e-b655-b94b4b0ce3e5%2Ffavion64x64.png?v=1615911920590")
+        link(rel="stylesheet", href="/custom.css")
     body
-        block content
+        nav.navbar.navbar-expand-lg.navbar-light.bg-light          
+            a.navbar-brand(href='#') Bookworm's Space
+              ul.navbar-nav.me-auto.mb-2.mb-lg-0
+                li.nav-item
+                  a.nav-link.active(aria-current='page', href='/') Home
+                li.nav-item
+                  a.nav-link(href='/books') Books
+                li.nav-item
+                  a.nav-link(href='/users') Users
+                li.nav-item
+                  a.nav-link(href='/transactions') Transactions                
+              
+        .container
+          block content
