--- a/views/users/addUser.pug
+++ b/views/users/addUser.pug
@@ -2,13 +2,16 @@ extends ../layouts/common.pug
 block content
   h1 Add a new user
   a(href="/users") Back
+  if errors
+    each error in errors
+      .alert.alert-danger=error
   form(action="/users/add", method="POST")
     label User name:
-    input(type="text", name="name")
+    input(type="text", name="name", value=values ? values.name : "")
     br
     br
     label Phone number:
-    textarea(name="phone")
+    input(type="text", name="phone", value=values ? values.phone : "")
     br
     br
-    button Add user
+    button Add user 
