--- a/views/layouts/common.pug
+++ b/views/layouts/common.pug
@@ -14,7 +14,10 @@ html
                 li.nav-item
                   a.nav-link(href='/users') Users
                 li.nav-item
-                  a.nav-link(href='/transactions') Transactions                
+                  a.nav-link(href='/transactions') Transactions 
+                li.nav-item
+                  a.nav-link(href='/auth/login') Login 
+                  
               
         .container
           block content
